# polymarket-ai-agent

./: .gitignore  Cargo.toml  Makefile  README.md
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  lib.rs  main.rs  market.rs  recorder.rs  trader.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: db.rs  features.rs  lib.rs  models.rs  repo.rs  schema.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: main.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/snapshot/: Cargo.toml
crates/snapshot/src/: main.rs
crates/trainer/: Cargo.toml
crates/trainer/src/: data.rs  export.rs  main.rs  train.rs
migrations/2026-04-07-050735-0000_training_pipeline/: down.sql  up.sql
records/: bet_market_ids.json  trades_20260406_231017.jsonl  trades_20260406_231638.jsonl  trades_20260407_054748.jsonl  trades_20260407_055324.jsonl  trades_20260407_215243.jsonl  trades_20260408_081536.jsonl  trades_20260408_085441.jsonl  trades_20260409_063500.jsonl  trades_20260409_075056.jsonl  trades_20260409_151011.jsonl  trades_20260409_151049.jsonl  trades_20260409_205310.jsonl  trades_20260410_102042.jsonl  trades_20260410_102454.jsonl  trades_20260410_103347.jsonl  trades_20260410_104250.jsonl  trades_20260410_104904.jsonl  trades_20260410_105755.jsonl  trades_20260410_111206.jsonl  trades_20260410_205132.jsonl  trades_20260413_090222.jsonl
ui/: package.json  tailwind.config.js  tsconfig.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/bets/: page.tsx
ui/src/app/proofs/: layout.tsx  page.tsx
ui/src/components/: HashCell.tsx  StatCard.tsx  StatusBadge.tsx
ui/src/hooks/: useSSE.ts
ui/src/lib/: api.ts  format.ts
