# polymarket-veil-agent/Cargo.toml
[workspace]
members = [
    "crates/common",
    "crates/model",
    "crates/trainer",
    "crates/agent",
    "crates/snapshot",
    "crates/api",
]
resolver = "2"

[workspace.dependencies]
anyhow             = "1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy            = "0.15"
chrono             = { version = "0.4", features = ["serde"] }
hex                = "0.4"
uuid               = { version = "1", features = ["v4", "serde"] }
thiserror          = "1"
candle-core        = "0.8"
candle-nn          = "0.8"
tokio-stream     = { version = "0.1", features = ["sync"] }
futures-util     = "0.3"

# Diesel — shared across common, api, snapshot, agent
diesel       = { version = "2", features = ["postgres", "uuid", "chrono", "r2d2", "numeric"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }