# crates/agent/Cargo.toml

[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
model = { path = "../model" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
