# crates/common/Cargo.toml
# Shared diesel schema, models, and DB pool for all crates.
# Any crate that touches the database depends on this.

[package]
name    = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel       = { workspace = true }
diesel-async = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
dotenvy      = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }