[package]
name = "trainer"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
model = { path = "../model" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }